add separator to "View" menu

--- a/player_window.ui
+++ b/player_window.ui
@@ -59,6 +59,7 @@
      <string>&amp;View</string>
     </property>
     <addaction name="actionFullscreen"/>
+    <addaction name="separator"/>
     <addaction name="actionSideBar"/>
    </widget>
    <addaction name="appMenu"/>
